--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0.01s;
 }
 
 .hero {
@@ -33,6 +36,8 @@ h1 {
     width: 100vw;
     text-align: center;
 }
+
+
 
 button {
     text-align: center;
